--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^19.0.0",
     "react-lottie": "^1.2.10",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "web-vitals": "^4.2.4"
   },
@@ -42,6 +43,6 @@
   "devDependencies": {
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "typescript": "^5.8.2"
+    "typescript": "^4.9.5"
   }
 }
