--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-lottie": "^1.2.10",
+    "react-router-dom": "^7.4.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@types/react-router-dom": "^5.3.3",
     "typescript": "^4.9.5"
   }
 }
